2008-01-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-01
	* fix to allow for the same (raw) event to be written (reco)
	several times.

2007-12-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-00
	* add process id and timestamp for raw cells

2007-09-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-01
	* remove some unnecessary functions from FUShmBuffer
	* accomodate the allocation of several FURecoCells for one single
	event

2007-05-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* add FUShmRawCell::index_, which is not necessarily equal to
	FUShmRawCell::fuResourceId_ anymore.
	* add method FUShmRawCell::setFuResourceId(uint).
	* call cell->clear() in FUShmBuffer::releaseRawCell();
	* remove FUShmRawCell::nSkip_ and anything related.

2007-03-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-04
	* bugfix: reco and dqm cells were not 'clear'ed before being
	declared 'free'.

2007-03-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-03
	* important bug fixes!

2007-03-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* fix waitRecoRead() and waitDqmRead()

2007-03-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-01
	* implement nice suggestion from Markus to have raw event cells
	properly discarded regardless of the event being selected or
	rejected.
	* fix to the discard chain for data events being acknowledged by
	the SM
	

2007-03-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* if I had a nickel for every change I made ...

2007-03-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-00
	* new API
	* remove class FUShmBufferCell
	* add classes FUShmRawCell, FUShmRecoCell, and FUShmDqmCell
	* add 'segmentationMode' flag, indicating if the buffer should be